--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-plugin-typescript": "^2.4.21",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-sharp": "^2.5.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
     "prettier": "2.1.1"
