--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
+  "tabWidth": 2,
+  "semi": true,
+  "endOfLine": "lf",
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "trailingComma": "es5",
   "arrowParens": "avoid",
-  "semi": false
+  "printWidth": 80
 }
