--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "noUnusedLocals": false,
-    "allowJs": true
+    "allowJs": true,
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["src/*"]
+    }
   },
   "exclude": ["node_modules", "public", ".cache"]
 }
