--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.10.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.21.2",
+    "gatsby-plugin-eslint": "^2.0.8",
     "prettier": "2.1.1"
   },
   "keywords": [
