--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@types/react-helmet": "^6.1.0",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-manifest": "^2.4.30",
@@ -27,12 +28,6 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.10.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-react": "^7.21.2",
-    "gatsby-plugin-eslint": "^2.0.8",
     "prettier": "2.1.1"
   },
   "keywords": [
