--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-helmet": "^6.1.0",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
+    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-postcss": "^2.3.13",
@@ -25,6 +26,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "tailwindcss": "^1.8.10",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
