--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@svgr/webpack": "^5.4.0",
     "@types/react-helmet": "^6.1.0",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
@@ -17,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-sass": "^2.3.14",
     "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-plugin-typescript": "^2.4.21",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-sharp": "^2.5.15",
