--- a/package.json
+++ b/package.json
@@ -32,7 +32,16 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
-    "prettier": "2.1.1"
+    "@babel/core": "^7.11.6",
+    "@storybook/addon-actions": "^6.0.22",
+    "@storybook/addon-docs": "^6.0.22",
+    "@storybook/addon-essentials": "^6.0.22",
+    "@storybook/addon-links": "^6.0.22",
+    "@storybook/react": "^6.0.22",
+    "babel-loader": "^8.1.0",
+    "prettier": "2.1.1",
+    "react-is": "^16.13.1",
+    "typescript-plugin-tw-template": "^2.1.0"
   },
   "keywords": [
     "gatsby"
@@ -45,7 +54,9 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "clean:all": "gatsby clean && rimraf public node_modules .cache"
+    "clean:all": "gatsby clean && rimraf public node_modules .cache",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
