--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,7 +58,8 @@
      "types": [
        "node",
        "react-helmet",
-       "react-dom"
+       "react-dom",
+       "@emotion/core"
      ],                           /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
