--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@reach/router": "^1.3.4",
     "@svgr/webpack": "^5.4.0",
     "@types/react-helmet": "^6.1.0",
+    "autoprefixer": "^10.0.1",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-create-client-paths": "^2.3.12",
     "gatsby-plugin-emotion": "^4.3.12",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-offline": "^3.2.28",
@@ -27,6 +29,8 @@
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-sharp": "^2.5.15",
     "node-sass": "^4.14.1",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
