--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@material-ui/icons": "^4.9.1",
     "@reach/router": "^1.3.4",
     "@svgr/webpack": "^5.4.0",
+    "@types/classnames": "^2.2.10",
     "@types/react-helmet": "^6.1.0",
     "autoprefixer": "^10.0.1",
+    "classnames": "^2.2.6",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-alias-imports": "^1.0.5",
