--- a/tsconfig.json
+++ b/tsconfig.json
@@ -79,11 +79,11 @@
     /* Advanced Options */
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
-    "include": ["./src/**/*"],
     "plugins": [
       {
         "name": "typescript-plugin-tw-template"
       }
     ]
-  }
+  },
+  "include": ["./src/**/*"]
 }
