--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reach/router": "^1.3.4",
     "@svgr/webpack": "^5.4.0",
     "@types/classnames": "^2.2.10",
+    "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
     "autoprefixer": "^10.0.1",
     "classnames": "^2.2.6",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@hot-loader/react-dom": "^17.0.0-rc.2",
     "@storybook/addon-actions": "^6.0.22",
     "@storybook/addon-docs": "^6.0.22",
     "@storybook/addon-essentials": "^6.0.22",
@@ -50,6 +52,7 @@
     "@storybook/react": "^6.0.22",
     "babel-loader": "^8.1.0",
     "babel-plugin-emotion": "^10.0.33",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "prettier": "2.1.1",
     "react-is": "^16.13.1",
     "typescript-plugin-tw-template": "^2.1.0"
