--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-helmet": "^6.1.0",
     "tailwindcss": "^1.8.10",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
+    "twin.macro": "^1.10.0",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
@@ -52,9 +53,11 @@
     "@storybook/react": "^6.0.22",
     "babel-loader": "^8.1.0",
     "babel-plugin-emotion": "^10.0.33",
+    "babel-plugin-macros": "^2.8.0",
     "eslint-plugin-react-hooks": "^4.1.2",
     "prettier": "2.1.1",
     "react-is": "^16.13.1",
+    "tailwind.macro": "^0.5.10",
     "typescript-plugin-tw-template": "^2.1.0"
   },
   "keywords": [
@@ -78,5 +81,14 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "babelMacros": {
+    "twin": {
+      "config": "tailwind.config.js",
+      "preset": "emotion",
+      "debugProp": true,
+      "debugPlugins": false,
+      "debug": false
+    }
   }
 }
